[project]
name = "scida"
version = "0.3.5"
description = "Convenience wrapper around large scientific datasets to process with dask."
authors = [{ name = "Chris Byrohl" }]
requires-python = ">=3.11"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = [
    {version = "^1.21", python = "<3.11"},
    {version = ">=1.26", python = ">=3.11"}
]
# need dask>2024.4.1 for py>=3.11.9 (https://github.com/dask/dask/pull/11035)
dask = [{extras = ["array", "dataframe", "distributed"], version = ">=2023", python = "<3.11.9"},
        {extras = ["array", "dataframe", "distributed"], version = ">=2024.4.1", python = ">=3.11.9"}
        ]
distributed = ">=2023"
h5py = "^3.7.0"
zarr = "^v2.10.0"
astropy = ">=5.0"
numba = ">=0.57"
pyyaml = ">=5.3.1"
jupyter = "^1.0.0"
tqdm = "^4.64.1"
pint = "^0.24"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
pre-commit = ">=2.17.0"
black = ">=22.1.0"
requests = ">=2.2.7"
coverage = "^7.0.1"
pytest-xdist = {extras = ["psutil"], version = "^3.1.0"}
pytest-profiling = "^1.7.0"
mypy = ">=0.930"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-jupyter = "^0.24.6"
ipykernel = "^6.19.4"
matplotlib = "^3.6.2"
ipywidgets = "^8.0.4"
isort = "^5.11.4"
flake8 = "^6.0.0"
line-profiler = "^4.0.2"
memory-profiler = "^0.61.0"
holoviews = {extras = ["recommended"], version = "^1.15.3"}
xarray = "^2022.12.0"
datashader = "^0.14.3"
pyinstrument = "^4.4.0"
memray = "^1.6.0"
mkdocs-video = "^1.4.0"
jupyter-contrib-nbextensions = "^0.7.0"
typer = "^0.9.0"
dask-jobqueue = "^0.8.2"
jupyter = "^1.0.0"
# https://github.com/Jupyter-contrib/jupyter_nbextensions_configurator/issues/165
pytest-mock = "^3.11.1"
notebook = "^6.4.12"
mkdocs-glightbox = "^0.3.4"
markdown-include = "^0.8.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["scida", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = [
    "error::DeprecationWarning"
]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".venv",
    "data",
    "plots",
]

[tool.ruff]
extend-include = ["*.ipynb"]
preview = true
line-length = 120
indent-width = 4

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E", # pycodestyle (error)
    "F", # pyflakes
    "B", # bugbear
    "B9",
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "I", # isort
    "UP", # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
]
ignore = [
    # only relevant if you run a script with `python -0`,
    # which seems unlikely for any of the scripts in this repo
    "B011",
    # Leave it to the formatter to split long lines and
    # the judgement of all of us.
    "E501",
    "RUF052",
    "E201",
    "E241",
    # Can use % formater inplace of f-strings
    "UP031",
    # Use key in group instrad of key in group.keys()
    "SIM118",
]

fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

# Pyright
[tool.pyright]
include = ["src", "**/*.py"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
typeCheckingMode = "standard"
