[project]
name = "scida"
version = "0.3.6"
description = "Convenience wrapper around large scientific datasets to process with dask."
authors = [{ name = "Chris Byrohl" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.26",
    "dask[array,dataframe,distributed]>=2024.4.1",
    "distributed>=2026.1.1",
    "h5py>=3.7.0",
    "zarr>=3.0",
    "astropy>=5.0",
    "numba>=0.57",
    "pyyaml>=5.3.1",
    "jupyter>=1.0.0",
    "tqdm>=4.64.1",
    "pint>=0.24",
    "requests>=2.31.0",
    "matplotlib>=3.6.0,!=3.9.1",
]

[dependency-groups]
dev = [
    "pytest>=6.2.5",
    "pre-commit>=2.17.0",
    "black==24.4.2",  # Pin to ensure consistent formatting across environments and CI
    "requests>=2.2.7",
    "coverage>=7.0.1",
    "pytest-xdist[psutil]>=3.1.0",
    "pytest-profiling>=1.7.0",
    "mypy>=0.930",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-jupyter>=0.24.6",
    "ipykernel>=6.19.4",
    "matplotlib>=3.6.2",
    "ipywidgets>=8.0.4",
    "isort==5.13.2",  # Pin to ensure consistent import sorting across environments and CI
    "flake8>=6.0.0",
    "line-profiler>=4.0.2",
    "memory-profiler>=0.61.0",
    "holoviews[recommended]>=1.15.3",
    "xarray>=2022.12.0",
    "datashader>=0.14.3",
    "pyinstrument>=4.4.0",
    "memray>=1.6.0",
    "mkdocs-video>=1.4.0",
    "jupyter-contrib-nbextensions>=0.7.0",
    "typer>=0.9.0",
    "dask-jobqueue>=0.8.2",
    "jupyter>=1.0.0",
    "pytest-mock>=3.11.1",
    "notebook>=6.4.12,<7",
    "mkdocs-glightbox>=0.3.4",
    "markdown-include>=0.8.1",
    "nox>=2024.4.15",
    "nox-uv>=0.2.0",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scida"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["scida", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = [
    "error::DeprecationWarning"
]
markers = [
    "unit: Pure unit tests with no I/O (always run in CI)",
    "integration: Tests using dummy/synthetic files (always run in CI)",
    "external: Tests requiring SCIDA_TESTDATA_PATH (skipped without data)",
    "network: Tests requiring network access",
]

[tool.black]
# Explicitly disable target-version inference from requires-python.
# Black 24.x auto-infers target_version from [project].requires-python, which
# changes formatting (e.g., trailing commas) compared to Poetry's format where
# [tool.poetry.dependencies].python wasn't read by black.
target-version = []

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
packages = ["scida"]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Start with permissive settings for gradual typing
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "scida.interface",
    "scida.fields",
    "scida.convenience",
    "scida.series",
]
# Stricter settings for core modules
disallow_untyped_defs = false
warn_unused_ignores = true
